--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/ProjetoEstoque?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo
 spring.datasource.username = root
-spring.datasource.password = Jogador10
+spring.datasource.password = @Jogador10
 #JPA
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
